--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -32,7 +32,7 @@
 
   </div>
     
-    <div class="row pb-2"style="margin-left: 1px;">
+    <!-- <div class="row pb-2"style="margin-left: 1px;">
       <div class="radio-button"> 
         <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FChospitalOnOff_Action" />
           <label class="radio-label"> {{item.name}}</label></div>
@@ -46,7 +46,7 @@
         </select>
       </div>
      
-    </div>
+    </div> -->
       
   
   <div class="mt-4">
