--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -34,7 +34,7 @@
           <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-4">
-        <span class="label">On or Off the Job</span>
+        <span class="label">24 Hour or Off the Job </span>
         <select  class="form-control" formControlName="FCaccOnOff">
           <option *ngFor="let job of jobs" value={{job.abbrev}}> 
             {{ job.name }}
