--- a/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
+++ b/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
@@ -41,7 +41,7 @@
     <div class="col-4">
 
       <span class="label label-default">Spouse Standard Face
-        Amount</span>
+        Amount($)</span>
       <input type="text" class="form-control mb-2 " formControlName="FCempCISpouseFcAmt" style="width: 100%;" placeholder="Spouse Standard Face Amount"required
       onkeyup="this.value=this.value.replace(/[^\d]/,'')">
     </div>
@@ -52,7 +52,7 @@
     </div>
     <div class="col-4">
       <span class="label label-default">Employee Standard Face
-        Amount</span>
+        Amount($)</span>
 
       <input type="text" class="form-control mb-2 " style="width: 100%;" formControlName="FCempCIEmpFcAmt" placeholder="Employee Standard Face Amount"required
       onkeyup="this.value=this.value.replace(/[^\d]/,'')">
