--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -41,7 +41,7 @@
       </div>
       <div class="col-3">
 
-        <span class="label label-default">Employee GI Amount Max</span>
+        <span class="label label-default">Employee GI Amount Max($)</span>
 
         <input type="text" formControlName="FCfppgEmpGIAmtMax" class="form-control mb-2 " style="width: 100%;"
           placeholder="Employee GI Amount Max" required
@@ -51,14 +51,14 @@
 
 
       <div class="col-3">
-        <span class="label label-default">Employee QI Amount Max</span>
+        <span class="label label-default">Employee QI Amount Max($)</span>
 
         <input type="text" formControlName="FCfppgEmpQIAmtMax" class="form-control mb-2 " style="width: 100%;"
           placeholder="Employee QI Amount Max" required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
       <div class="col-3">
-        <span class="label label-default">Employee SI Max Amount</span>
+        <span class="label label-default">Employee SI Max Amount($)</span>
         <input type="text" class="form-control mb-2" formControlName="FCfppgEmpAmtMax" style="width: 100%;"
           placeholder="Employee Max Amount" required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
@@ -72,7 +72,7 @@
           <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-3">
-        <span class="label label-default">Spouse GI Amount Max</span>
+        <span class="label label-default">Spouse GI Amount Max($)</span>
 
         <input type="text" formControlName="FCfppgSpouseGIAmtMax" class="form-control mb-2 " style="width: 100%;"
           placeholder="Spouse GI Amount Max
@@ -80,13 +80,13 @@
            onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
       <div class="col-3">
-        <span class="label label-default">Spouse QI Amount Max</span>
+        <span class="label label-default">Spouse QI Amount Max($)</span>
         <input type="text" formControlName="FCfppgSpouseQIAmtMax" class="form-control mb-2 " style="width: 100%;"
           placeholder="Spouse QI Amount Max"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
       <div class="col-3">
-        <span class="label label-default">Spouse Max Amount</span>
+        <span class="label label-default">Spouse Max Amount($)</span>
         <input type="text" formControlName="FCfppgSpouseMaxAmt" class="form-control mb-2 " style="width: 100%;"
           placeholder="Spouse Max Amount"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
