--- a/ClientApp/src/app/basic-group-life/basic-group-life.component.html
+++ b/ClientApp/src/app/basic-group-life/basic-group-life.component.html
@@ -40,7 +40,7 @@
           <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-3">
-        <span class="label label-default">Employee Face Amount</span>
+        <span class="label label-default">Employee Face Amount($)</span>
         <input type="text" class="form-control mb-2 " formControlName="FCbasicEmpFcAmt" style="width: 100%;"
           placeholder="Employee Face Amount"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
@@ -55,13 +55,13 @@
           <label class="radio-label">Validate</label></div>
       </div> -->
       <div class="col-3">
-        <span class="label label-default">Spouse Face Amount</span>
+        <span class="label label-default">Spouse Face Amount($)</span>
         <input type="text" class="form-control mb-2 " formControlName="SpouseFaceAmount" style="width: 100%;"
           placeholder="Spouse Face Amount"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
       <div class="col-3">
-        <span class="label label-default">Child Face Amount</span>
+        <span class="label label-default">Child Face Amount($)</span>
         <input type="text" class="form-control mb-2 " formControlName="ChildFaceAmount" style="width: 100%;"
           placeholder="Child Face Amount"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
