--- a/ClientApp/src/app/vol-group-life/vol-group-life.component.html
+++ b/ClientApp/src/app/vol-group-life/vol-group-life.component.html
@@ -40,13 +40,13 @@
       </div>
       <div class="col-3">
 
-        <span class="label label-default">Employee GI Amount Max</span>
+        <span class="label label-default">Employee GI Amount Max($)</span>
 
         <input type="text" class="form-control mb-2 " formControlName="FCVolGrpLfEmpGIAmtMax" style="width: 100%;" placeholder="Employee GI Amount Max"required
         onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
       <div class="col-3">
-        <span class="label label-default">Employee Max Amount</span>
+        <span class="label label-default">Employee Max Amount($)</span>
         <input type="text"  formControlName="FCVolGrpLfEmpAmtMax" class="form-control mb-2 " style="width: 100%;" placeholder="Employee Max Amount"required
         onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
@@ -67,8 +67,8 @@
         <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCVolGrpLfSpouseAmtMax_Action" />
           <label class="radio-label"> {{item.name}}</label></div>
       </div>
-      <div class="col-3">
-        <span class="label label-default">Spouse GI Amount Max</span>
+      <div class="col-3" style="margin-left: 23px;">
+        <span class="label label-default">Spouse GI Amount Max($)</span>
 
         <input type="text"  formControlName="FCVolGrpLfSpouseGIAmtMax" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse GI Amount Max
               "required
@@ -76,7 +76,7 @@
       </div>
      
       <div class="col-3" style="justify-content:space-evenly;">
-        <span class="label label-default">Spouse Max Amount</span>
+        <span class="label label-default">Spouse Max Amount($)</span>
         <input type="text"  formControlName="FCVolGrpLfSpouseMaxAmt" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse Max Amount"required
         onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
