--- a/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
+++ b/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
@@ -42,7 +42,7 @@
       </div>
       <div class="col-3">
 
-        <span class="label label-default">Employee GI Amount Max</span>
+        <span class="label label-default">Employee GI Amount Max($)</span>
 
         <input type="text" class="form-control mb-2 " formControlName="FCVolCIEmpGIAmtMax" style="width: 100%;"
           placeholder="Employee GI Amount Max"required
@@ -50,14 +50,14 @@
       </div>
 
       <div class="col-3">
-        <span class="label label-default">Employee QI Amount Max</span>
+        <span class="label label-default"> Employee QI Amount Max($)</span>
 
         <input type="text" class="form-control mb-2 " formControlName="FCVolCIEmpQIAmtMax" style="width: 100%;"
           placeholder="Employee QI Amount Max"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
       <div class="col-3">
-        <span class="label label-default">Employee Max Amount</span>
+        <span class="label label-default">Employee Max Amount($)</span>
         <input type="text" class="form-control mb-2 " formControlName="FCVolCIEmpAmtMax" style="width: 100%;"
           placeholder="Employee Max Amount"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
@@ -69,7 +69,7 @@
           <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-3">
-        <span class="label label-default">Spouse GI Amount Max</span>
+        <span class="label label-default">Spouse GI Amount Max($)</span>
 
         <input type="text" class="form-control mb-2 " formControlName="FCVolCISpouseGIAmtMax" style="width: 100%;"
           placeholder="Spouse GI Amount Max
@@ -77,20 +77,46 @@
               onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
       <div class="col-3">
-        <span class="label label-default">Spouse QI Amount Max</span>
+        <span class="label label-default">Spouse QI Amount Max($)</span>
         <input type="text" class="form-control mb-2 " formControlName="FCVolCISpouseQIAmtMax" style="width: 100%;"
           placeholder="Spouse QI Amount Max"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
       <div class="col-3">
-        <span class="label label-default">Spouse Max Amount</span>
+        <span class="label label-default">Spouse Max Amount($)</span>
         <input type="text" class="form-control mb-2 " formControlName="FCVolCISpouseAmtMax" style="width: 100%;"
           placeholder="Spouse Max Amount"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
 
     </div>
+    <div class="row mt-2" style="margin-top: 10px;margin-left: 7px;;margin-right: 7%;">
+      <div class="radio-button">
+        <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCVolCIChildAmtMax_Action" />
+          <label class="radio-label"> {{item.name}}</label></div>
+      </div>
+      <div class="col-4" style="margin-left: 20px;">
+        <span class="label label-default">Child GI Amount Max($)</span>
+        <input type="text" class="form-control mb-2 " formControlName="FCVolCIChildGIAmtMax" style="width: 100%;"
+          placeholder="Child GI Amount Max"required
+          onkeyup="this.value=this.value.replace(/[^\d]/,'')">
+      </div>
 
+      <!-- <div class="col-3">
+        <span class="label label-default">Child QI Amount Max</span>
+        <input type="text" class="form-control mb-2 " formControlName="FCVolCIChildQIAmtMax" style="width: 100%;"
+          placeholder="Child QI Amount Max">
+      </div> -->
+
+      <div class="col-4">
+        <span class="label label-default">Child Max Amount($)</span>
+        <input type="text" class="form-control mb-2 " formControlName="FCVolCIChildAmtMax" style="width: 100%;"
+          placeholder="Child Max Amount"required
+          onkeyup="this.value=this.value.replace(/[^\d]/,'')">
+      </div>
+
+
+    </div>
     <div class="row mt-2" style="margin-top: 10px;justify-content:space-evenly;margin-right: 7%;">
       <div class="radio-button">
         <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCVolCIPlanCodeManualEntry_Action" />
@@ -116,6 +142,8 @@
 
 
     </div>
+
+   
 
     <!-- <div class="row mt-2" style="justify-content:space-evenly;">
       <div class="radio-button">
