lookup service Changes

--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -1138,6 +1138,6 @@
 
     </div>
   </div>
-  <button type="submit" class="btn btn-success mt-4 mb-4" style="float: right;" (click)="onSubmit()">Submit Group
+  <button type="submit" class="btn btn-success mt-4 mb-4" style="float: right;" [disabled]="fromSearchFlag && status ==''" (click)="onSubmit()">Submit Group
     Setup Information</button> 
 </div>
