--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -6,5 +6,11 @@
     </h1> -->
     <router-outlet></router-outlet>
   </div>
-  <app-footer ></app-footer>
+
+    <div >
+      <app-spinner [isRunning]="isLoading"></app-spinner>
+    </div>
+  
+
+  <app-footer></app-footer>
 </body>
